Mon Sep 27 15:25:05 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/net/imap/test_imap.rb: resurrection of r29259.
	  this change depends on minitest 1.7.1.

	* lib/test/unit/assertions.rb: ditto.

Sun Sep 26 22:59:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config.sub (x86_64-pc-mingw64): regularize.

Sun Sep 26 22:21:07 2010  wanabe  <s.wanabe@gmail.com>

	* ext/openssl/ossl_hmac.c (ossl_hmac_hexdigest, ossl_hmac_s_hexdigest),
	  ext/openssl/ossl_pkey_ec.c (ossl_ec_group_set_seed),
	  ext/openssl/ossl_ssl_session.c (ossl_ssl_session_to_der),
	  ext/openssl/ossl_pkcs7.c (numberof): suppress warnings.
	  [ruby-core:31932]

Sun Sep 26 10:25:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config.{guess,sub}: updated to automake-1.11.1.

Sat Sep 25 22:48:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): fix quoting.

Sat Sep 25 10:30:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): use -unexported_symbol only
	  when available.  http://trac.macports.org/ticket/26341

Sat Sep 25 10:05:49 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Always add -mieee for Renesas SH4.
	Thanks, Nobuhiro Iwamatsu. [Feature #3874] [ruby-core:32548]

Sat Sep 25 01:34:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (install-cross): target to install cross-compiling
	  stuff.

Fri Sep 24 23:44:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_call), vm.c (invoke_block_from_c),
	  vm_insnhelper.c (vm_yield_with_cfunc): pass given block.
	  [ruby-core:32075]

	* vm_eval.c (rb_funcall_passing_block): new function to call
	  method with passing given block.

Fri Sep 24 15:50:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_to_i): fix rdoc: String#to_i raises an
	  exception when base is invalid. [ruby-core:31685]

Fri Sep 24 15:28:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>
